teste para voltar o back up

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -75,7 +74,7 @@
                         <th>Patrimônio</th>
                         <th>Status Calibração</th>
                         <th>Data Vencimento Calibração</th>
-                        <!-- <th>Status Manutenção</th> -->
+                        <th>Status Manutenção</th>
                     </tr>
                     <tr id="headerFilters">
                         </tr>
@@ -102,8 +101,8 @@
                         <th>Equipamento</th>
                         <th>Modelo</th>
                         <th>Fabricante</th>
-                        <!-- <th>Status Calibração</th> -->
-                        <!-- <th>Status Manutenção</th> -->
+                        <th>Status Calibração</th>
+                        <th>Status Manutenção</th>
                     </tr>
                 </thead>
                 <tbody>
